# django-sans-db

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  README.md  mypy.ini  pyproject.toml  tox.ini  verify-version.sh
.github/workflows/: release-to-pypi.yml  tests.yml
sans_db/: context_decorators.py  context_managers.py  exceptions.py
sans_db/template_backends/: django_sans_db.py
sans_db/templatetags/: sansdb.py
tests/: definitions.py  models.py  settings.py  test_context_managers.py  test_decorator.py  test_template_tags.py
tests/template_backends/: test_django_sans_db.py
tests/templates/: django_template.html
