[tool.poetry]
name = "django-sans-db"
version = "0.1.0"
description = ""
authors = ["Charlie Denton <charlie@meshy.co.uk>"]
license = "MIT"
packages = [
    { include = "sans_db" }
]

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]
tox = "^3.18.0"
pre-commit = "^2.6.0"
django-stubs = "^1.5.0"
tox-poetry-dev-dependencies = "^0.0.9"

[tool.isort]
lines_after_imports = 2
profile = "black"
src_paths = ["sans_db", "test"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
